--- a/Jungle-Academy/portfolio1/index.html
+++ b/Jungle-Academy/portfolio1/index.html
@@ -4,10 +4,17 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="/portfolio1/css/index.css">
+  <link rel="stylesheet" href="css/index.css">
   <title>Smart-Uniform</title>
 </head>
 <body>
-  
+  <main>
+    <section id="main-door">
+      <!-- 이거 백그라운드로 넣는거 같은데
+        <img src="/Practice-2019/Jungle-Academy/portfolio1/img/main/img_smart_intro01.jpg" alt="main-door"> 
+      -->
+    </section>
+
+  </main>
 </body>
 </html>
