--- a/Jungle-Academy/level2-memo/memo.html
+++ b/Jungle-Academy/level2-memo/memo.html
@@ -120,8 +120,8 @@
     });
 
     //가짜로 내용넣기에 왜 3개가 뜨는지 모르겠음
-    $('.memo-body .memo-title').val("안녕 난 타이틀")
-    $('.memo-body .memo-description').val('안녕 난 내용');
+    // $('.memo-body .memo-title').val("안녕 난 타이틀")
+    // $('.memo-body .memo-description').val('안녕 난 내용');
     // $('.memo-body #memo-save').trigger('click');
     // $('.memo-body #memo-save').trigger('click');
     // $('.memo-show .memo-body:last-child').trigger('hover');
@@ -130,6 +130,5 @@
     //메모 타이틀에 내용이 없을 경우 title line이 안보이고 내용 있을 경우 보이게
 
   </script>
-
 </body>
 </html>
