--- a/Jungle-Academy/portfolio1/main.html
+++ b/Jungle-Academy/portfolio1/main.html
@@ -1,164 +1,192 @@
 <!DOCTYPE html>
 <html lang="ko">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="/Practice-2019/Jungle-Academy/portfolio1/css/main.css">
+  <script src="https://unpkg.com/jquery"></script>
   <title>Document</title>
 </head>
-<body>
-    <header class="smartMenu">
-        <nav class="gnb">
-          <div class="gnb-menu">
-            <a class="blue-gnb">
-              <span>부모님선생님정보통</span>
-            </a>
-            <a class="pink-gnb">
-              <span>학생들놀이터스마트</span>
-            </diav>
-          </div>
-          
-          <section id="blue-menu">
-            <div class="menu-body">
-              <div class="btnBox"> 
-                <a href="#">EN</a>
-                <a href="#">CN</a>
-                <a href="#" class="closeBtn">
-                  <img src="img/btn-close.png">
-                </a>
-              </div>
-              <div class="main-body">
-                <h2 class="headerLogo">
-                  부 모 님<br>선 생 님<br>정 보 통
-                </h2>
-                <!--btnBox와 아래에 들어갈 footer영역은 고정되어 있음
-                footer영역은 snb html입력 아직 안함-->
-    
-                <div class="gnbMenu">
-                  <ul class="contents">
-                    <h3>학교주관 구매제</h3>
-                    <p>소중한 우리아이의 합리적인 교복 구매 운영요령을 알려드립니다</p>
-                    <span></span>
-                    <li class="contentsList">
-                      <a href="#" class="insideList">학교 주관 구매제란</a>
-                    </li>
-                    <li class="contentsList">
-                      <a href="#" class="insideList">왜 스마트인가</a>
-                    </li>
-                  </ul>
-                  <ul class="contents">
-                    <h3>예쁜 교복 스마트</h3>
-                    <p>교복의 프리스타일! 불편함을 날리고 스타일을 살리다</p>
-                    <span></span>
-                    <li class="contentsList">
-                      <a href="#" class="insideList">소년 스타일</a>
-                    </li>
-                    <li class="contentsList">
-                      <a href="#" class="insideList">소녀 스타일</a>
-                    </li>
-                    <li class="contentsList">
-                      <a href="#" class="insideList">스타일링 아이템</a>
-                    </li>
-                  </ul>
-                  <ul class="contents">
-                    <h3>편한 교복 스마트</h3>
-                    <p>교복의 프리스타일! 이젠 생활복/체육복도 스타일리쉬하게~</p>
-                    <span></span>
-                    <li class="contentsList">
-                      <a href="#" class="insideList">인생교복</a>
-                    </li>
-                    <li class="contentsList">
-                      <a href="#" class="insideList">생활복 스타일</a>
-                    </li>
-                    <li class="contentsList">
-                      <a href="#" class="insideList">체육복 스타일</a>
-                    </li>
-                  </ul>
-                  <ul class="contents">
-                    <h3>교복관리 TIPs</h3>
-                    <p>입을 때보다 안 입을 때가 더 중요해 꼭 지켜야할 교복관리 TIPs을 소개합니다</p>
-                    <span></span>
-                    <li class="contentsList">
-                      <a href="#" class="insideList">교복관리 TIPs</a>
-                    </li>
-                  </ul>
-                  <ul class="contents">
-                    <h3>이벤트</h3>
-                    <p>스마트가 준비한 다양한 이벤트에 직접 참여해 보세요</p>
-                    <span></span>
-                    <li class="contentsList">
-                      <a href="#" class="insideList">이벤트</a>
-                    </li>
-                  </ul>
-                  <ul class="contents">
-                    <h3>매장/고객센터</h3>
-                    <p>전국에 있는 스마트 매장을 한번에 찾아 볼 수 있습니다</p>
-                    <span></span>
-                    <li class="contentsList">
-                      <a href="#" class="insideList">매장찾기</a>
-                    </li>
-                    <li class="contentsList">
-                      <a href="#" class="insideList">고객문의</a>
-                    </li>
-                    <li class="contentsList">
-                      <a href="#" class="insideList">업무제휴문의</a>
-                    </li>
-                    <li class="contentsList">
-                      <a href="#" class="insideList">대리점개설문의</a>
-                    </li>
-                    <li class="contentsList">
-                      <a href="#" class="insideList">FAQ</a>
-                    </li>
-                  </ul>
-                  <ul class="contents">
-                    <h3>스마트 소개</h3>
-                    <p>교복의 역사가 smart의 역사! 바른학생복 스마트를 소개해 드립니다</p>
-                    <span></span>
-                    <li class="contentsList">
-                      <a href="#" class="insideList">스마트소개</a>
-                    </li>
-                    <li class="contentsList">
-                      <a href="#" class="insideList">수상연혁</a>
-                    </li>
-                    <li class="contentsList">
-                      <a href="#" class="insideList">사회공헌</a>
-                    </li>
-                    <li class="contentsList">
-                      <a href="#" class="insideList">글로벌 네트워크</a>
-                    </li>
-                    <li class="contentsList">
-                      <a href="#" class="insideList">언론보도</a>
-                    </li>
-                  </ul>
-                  <ul class="contents">
-                    <h3>S'FD소개</h3>
-                    <p>좋은원단, 편한디자인, 올바르게 일하는 사람들 S’FD 입니다</p>
-                    <span></span>
-                    <li class="contentsList">
-                      <a href="#" class="insideList">S'FD 회사소개</a>
-                    </li>
-                    <li class="contentsList">
-                      <a href="#" class="insideList">CI</a>
-                    </li>
-                    <li class="contentsList">
-                      <a href="#" class="insideList">인재채용</a>
-                    </li>
-                    <li class="contentsList">
-                      <a href="#" class="insideList">복리후생</a>
-                    </li>
-                  </ul>
-                </div>
-              </div>
-            </div>
-          </section>
 
+<body>
+  <header class="smartMenu">
+    <nav class="gnb">
+      <div class="gnb-menu">
+        <a class="blue-gnb">
+          <span>부모님선생님정보통</span>
+        </a>
+        <a class="pink-gnb">
+          <span>학생들놀이터스마트</span>
+      </div>
+
+      <section class="blue-menu">
+        <div class="menu-body">
+          <div class="btnBox">
+            <a href="#">EN</a>
+            <a href="#">CN</a>
+            <a href="#" class="closeBtn">
+              <img src="img/btn-close.png">
+            </a>
+          </div>
+
+          <div class="main-body">
+            <h2 class="headerLogo">
+              부 모 님<br>선 생 님<br>정 보 통
+            </h2>
+            <div class="gnbMenu">
+              <ul class="contents-top">
+                <h3>학교주관 구매제</h3>
+                <p>소중한 우리아이의 합리적인<br>교복 구매 운영요령을 알려드립니다</p>
+                <span></span>
+                <li class="contentsList">
+                  <a href="#" class="insideList">학교 주관 구매제란</a>
+                </li>
+                <li class="contentsList">
+                  <a href="#" class="insideList">왜 스마트인가</a>
+                </li>
+              </ul>
+              <ul class="contents-top">
+                <h3>예쁜 교복 스마트</h3>
+                <p>교복의 프리스타일!<br>불편함을 날리고 스타일을 살리다</p>
+                <span></span>
+                <li class="contentsList">
+                  <a href="#" class="insideList">소년 스타일</a>
+                </li>
+                <li class="contentsList">
+                  <a href="#" class="insideList">소녀 스타일</a>
+                </li>
+                <li class="contentsList">
+                  <a href="#" class="insideList">스타일링 아이템</a>
+                </li>
+              </ul>
+              <ul class="contents-top">
+                <h3>편한 교복 스마트</h3>
+                <p>교복의 프리스타일!<br>이젠 생활복/체육복도 스타일리쉬하게~</p>
+                <span></span>
+                <li class="contentsList">
+                  <a href="#" class="insideList">인생교복</a>
+                </li>
+                <li class="contentsList">
+                  <a href="#" class="insideList">생활복 스타일</a>
+                </li>
+                <li class="contentsList">
+                  <a href="#" class="insideList">체육복 스타일</a>
+                </li>
+              </ul>
+              <ul class="contents-top">
+                <h3>교복관리 TIPs</h3>
+                <p>입을 때보다 안 입을 때가<br>더 중요해 꼭 지켜야할<br>교복관리 TIPs을 소개합니다</p>
+                <span></span>
+                <li class="contentsList">
+                  <a href="#" class="insideList">교복관리 TIPs</a>
+                </li>
+              </ul>
+              <ul class="contents-buttom">
+                <h3>이벤트</h3>
+                <p>스마트가 준비한<br>다양한 이벤트에 직접 참여해 보세요</p>
+                <span></span>
+                <li class="contentsList">
+                  <a href="#" class="insideList">이벤트</a>
+                </li>
+              </ul>
+              <ul class="contents-buttom">
+                <h3>매장/고객센터</h3>
+                <p>전국에 있는 스마트 매장을<br>한번에 찾아 볼 수 있습니다</p>
+                <span></span>
+                <li class="contentsList">
+                  <a href="#" class="insideList">매장찾기</a>
+                </li>
+                <li class="contentsList">
+                  <a href="#" class="insideList">고객문의</a>
+                </li>
+                <li class="contentsList">
+                  <a href="#" class="insideList">업무제휴문의</a>
+                </li>
+                <li class="contentsList">
+                  <a href="#" class="insideList">대리점개설문의</a>
+                </li>
+                <li class="contentsList">
+                  <a href="#" class="insideList">FAQ</a>
+                </li>
+              </ul>
+              <ul class="contents-buttom">
+                <h3>스마트 소개</h3>
+                <p>교복의 역사가 smart의 역사!<br>바른학생복 스마트를 소개해 드립니다</p>
+                <span></span>
+                <li class="contentsList">
+                  <a href="#" class="insideList">스마트소개</a>
+                </li>
+                <li class="contentsList">
+                  <a href="#" class="insideList">수상연혁</a>
+                </li>
+                <li class="contentsList">
+                  <a href="#" class="insideList">사회공헌</a>
+                </li>
+                <li class="contentsList">
+                  <a href="#" class="insideList">글로벌 네트워크</a>
+                </li>
+                <li class="contentsList">
+                  <a href="#" class="insideList">언론보도</a>
+                </li>
+              </ul>
+              <ul class="contents-buttom">
+                <h3>S'FD소개</h3>
+                <p>좋은원단, 편한디자인, 올바르게 일하는<br>사람들 S’FD 입니다</p>
+                <span></span>
+                <li class="contentsList">
+                  <a href="#" class="insideList">S'FD 회사소개</a>
+                </li>
+                <li class="contentsList">
+                  <a href="#" class="insideList">CI</a>
+                </li>
+                <li class="contentsList">
+                  <a href="#" class="insideList">인재채용</a>
+                </li>
+                <li class="contentsList">
+                  <a href="#" class="insideList">복리후생</a>
+                </li>
+              </ul>
+            </div>
+          </div>
 
           <div class="snb">
-            <!-- footter영역 -->
+            <div class="snb-center">
+              <a href="https://www.facebook.com/smartzzang" class="snb-btn">
+                <img src="/Practice-2019/Jungle-Academy/portfolio1/img/header, footer/ico_h_facebook.png"
+                  alt="facebook">
+              </a>
+              <a href="https://story.kakao.com/ch/smartfnd" class="snb-btn">
+                <img src="/Practice-2019/Jungle-Academy/portfolio1/img/header, footer/ico_h_story.png" alt="kakaostory">
+              </a>
+              <a href="https://www.youtube.com/channel/UC9Pfm_o3Y3OgtpFXUIvsV7w?feature=watch" class="snb-btn">
+                <img src="/Practice-2019/Jungle-Academy/portfolio1/img/header, footer/ico_h_youtube.png" alt="youtube">
+              </a>
+              <a href="https://blog.naver.com/smartfnd" class="snb-btn">
+                <img src="/Practice-2019/Jungle-Academy/portfolio1/img/header, footer/ico_h_nblog.png" alt="nblog">
+              </a>
+              <a href="https://www.instagram.com/ilovesmart/" class="snb-btn">
+                <img src="/Practice-2019/Jungle-Academy/portfolio1/img/header, footer/ico_h_instargram.png"
+                  alt="instagram">
+              </a>
+            </div>
+            <a href="https://pf.kakao.com/_LxoyAj" class="snb-right-btn">
+              <img src="/Practice-2019/Jungle-Academy/portfolio1/img/header, footer/ico_h_kakao.png" alt="kakao">
+            </a>
           </div>
-        </nav>
-      </header>
-
+        </div>
+      </section>
+    </nav>
+  </header>
 </body>
+
+<script>
+  $(document).on('click', '#blue-gnb', function () {
+    $('.blue-menu').addClass('menu-active');
+  });
+
+
+</script>
+
 </html>
