--- a/Jungle-Academy/portfolio1/main.html
+++ b/Jungle-Academy/portfolio1/main.html
@@ -350,14 +350,18 @@
 
   //부모님메뉴 오픈
   $(document).on('click', '#blue-gnb', function () {
-    $('#blue-menu').addClass('menu-active');
+    $('.menu.parents').addClass('menu-active');
   });
 
   //학생들메뉴 오픈
   $(document).on('click','#pink-gnb',function(){
-    $('#pink-menu').addClass('menu-active');
+    $('.menu.students').addClass('menu-active');
   });
 
+  //메뉴 닫기
+  $(document).on('click','.closeBtn', function(){
+    $('.menu').removeClass('menu-active');
+  });
 
 </script>
 
