몇가지 수정

--- a/Jungle-Academy/portfolio1/index.html
+++ b/Jungle-Academy/portfolio1/index.html
@@ -56,8 +56,9 @@
     // });
 
     // main-door 효과 (es5)
+    /*
     promise(function(resolve){ $(window).on("load",resolve) })
-    .then(function(){
+    .then(async function(){
       $("#main-door").addClass("door-active");
       await promise.timeout(1000);
       $("#main-door").removeClass("door-active");
@@ -71,9 +72,9 @@
       $("#main-door").removeClass("door-active");
       return promise.timeout(1000);
     });
+    */
 
     //chrome, ie edge에서만 가능한 문법 (es6)
-    /*
     $(window).on("load", async function(){
       $("#main-door").addClass("door-active");
       await promise.timeout(1000);
@@ -84,7 +85,7 @@
       $("#main-door").removeClass("door-active");
       await promise.timeout(1000);
     });
-    */
+  
     
   </script>
 
