--- a/Jungle-Academy/portfolio1/index.html
+++ b/Jungle-Academy/portfolio1/index.html
@@ -64,7 +64,7 @@
       return promise.timeout(1000);
     })
     .then(function(){
-      $("#main-door").addClass("door-active");
+      $("#main-door").addClass("banner-active");
       return promise.timeout(1000);
     })
     .then(function(){
