--- a/Jungle-Academy/portfolio1/main.html
+++ b/Jungle-Academy/portfolio1/main.html
@@ -7,7 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="css/main.css">
   <script src="https://unpkg.com/jquery"></script>
-  <title>Document</title>
+  <title>브랜드파워1위 스마트교복</title>
 </head>
 
 <body>
@@ -155,25 +155,25 @@
           <div class="snb">
             <div class="snb-center">
               <a href="https://www.facebook.com/smartzzang" class="snb-btn">
-                <img src="/Practice-2019/Jungle-Academy/portfolio1/img/header, footer/ico_h_facebook.png"
+                <img src="img/header, footer/ico_h_facebook.png"
                   alt="facebook">
               </a>
               <a href="https://story.kakao.com/ch/smartfnd" class="snb-btn">
-                <img src="/Practice-2019/Jungle-Academy/portfolio1/img/header, footer/ico_h_story.png" alt="kakaostory">
+                <img src="img/header, footer/ico_h_story.png" alt="kakaostory">
               </a>
               <a href="https://www.youtube.com/channel/UC9Pfm_o3Y3OgtpFXUIvsV7w?feature=watch" class="snb-btn">
-                <img src="/Practice-2019/Jungle-Academy/portfolio1/img/header, footer/ico_h_youtube.png" alt="youtube">
+                <img src="img/header, footer/ico_h_youtube.png" alt="youtube">
               </a>
               <a href="https://blog.naver.com/smartfnd" class="snb-btn">
-                <img src="/Practice-2019/Jungle-Academy/portfolio1/img/header, footer/ico_h_nblog.png" alt="nblog">
+                <img src="img/header, footer/ico_h_nblog.png" alt="nblog">
               </a>
               <a href="https://www.instagram.com/ilovesmart/" class="snb-btn">
-                <img src="/Practice-2019/Jungle-Academy/portfolio1/img/header, footer/ico_h_instargram.png"
+                <img src="img/header, footer/ico_h_instargram.png"
                   alt="instagram">
               </a>
             </div>
             <a href="https://pf.kakao.com/_LxoyAj" class="snb-right-btn">
-              <img src="/Practice-2019/Jungle-Academy/portfolio1/img/header, footer/ico_h_kakao.png" alt="kakao">
+              <img src="img/header, footer/ico_h_kakao.png" alt="kakao">
             </a>
           </div>
         </div>
@@ -198,7 +198,7 @@
             <div class="gnbMenu">
               <ul class="contents-top">
                 <h3>예쁜 교복 스마트</h3>
-                <p>교복의 프리스타일! 불편함을 날리고 스타일을 살리다</p>
+                <p>교복의 프리스타일!<br> 불편함을 날리고 스타일을 살리다</p>
                 <span></span>
                 <li class="contentsList">
                   <a href="#" class="insideList">소년 스타일</a>
@@ -212,7 +212,7 @@
               </ul>
               <ul class="contents-top">
                 <h3>편한 교복 스마트</h3>
-                <p>교복의 프리스타일! 이젠 생활복/체육복도 스타일리쉬하게~</p>
+                <p>교복의 프리스타일!<br> 이젠 생활복/체육복도 스타일리쉬하게~</p>
                 <span></span>
                 <li class="contentsList">
                   <a href="#" class="insideList">인생교복</a>
@@ -226,7 +226,7 @@
               </ul>
               <ul class="contents-top">
                 <h3>스마트 TV</h3>
-                <p>소통하는 브랜드 스마트의 영상을 만나보세요</p>
+                <p>소통하는 브랜드 스마트의<br> 영상을 만나보세요</p>
                 <span></span>
                 <li class="contentsList">
                   <a href="#" class="insideList">채널 MX</a>
@@ -240,7 +240,7 @@
               </ul>
               <ul class="contents-top">
                 <h3>룩북</h3>
-                <p>프리하고 스타일리쉬한 스마트 패션 스타일을 만나보세요</p>
+                <p>프리하고 스타일리쉬한 스마트<br> 패션 스타일을 만나보세요</p>
                 <span></span>
                 <li class="contentsList">
                   <a href="#" class="insideList">스마트 룩북</a>
@@ -254,7 +254,7 @@
               </ul>
               <ul class="contents-buttom">
                 <h3>스마트 히스토리</h3>
-                <p>최고의 스타와 함께한 스마트 학생복을 공개합니다</p>
+                <p>최고의 스타와 함께한<br> 스마트 학생복을 공개합니다</p>
                 <span></span>
                 <li class="contentsList">
                   <a href="#" class="insideList">모델 히스토리</a>
@@ -265,7 +265,7 @@
               </ul>
               <ul class="contents-buttom">
                 <h3>이벤트</h3>
-                <p>스마트가 준비한 다양한 이벤트에 직접 참여해 보세요</p>
+                <p>스마트가 준비한<br> 다양한 이벤트에 직접 참여해 보세요</p>
                 <span></span>
                 <li class="contentsList">
                   <a href="#" class="insideList">이벤트</a>
@@ -273,7 +273,7 @@
               </ul>
               <ul class="contents-buttom">
                 <h3>매장/고객센터</h3>
-                <p>전국에 있는 스마트 매장을 한번에 찾아 볼 수 있습니다</p>
+                <p>전국에 있는 스마트 매장을<br> 한번에 찾아 볼 수 있습니다</p>
                 <span></span>
                 <li class="contentsList">
                   <a href="#" class="insideList">매장찾기</a>
@@ -293,7 +293,7 @@
               </ul>
               <ul class="contents-buttom">
                 <h3>스마트 소개</h3>
-                <p>교복의 역사가 smart의 역사! 바른학생복 스마트를 소개해 드립니다</p>
+                <p>교복의 역사가 smart의 역사!<br> 바른학생복 스마트를 소개해 드립니다</p>
                 <span></span>
                 <li class="contentsList">
                   <a href="#" class="insideList">스마트소개</a>
@@ -317,25 +317,25 @@
           <div class="snb">
             <div class="snb-center">
               <a href="https://www.facebook.com/smartzzang" class="snb-btn">
-                <img src="/Practice-2019/Jungle-Academy/portfolio1/img/header, footer/ico_h_facebook.png"
+                <img src="img/header, footer/ico_h_facebook.png"
                   alt="facebook">
               </a>
               <a href="https://story.kakao.com/ch/smartfnd" class="snb-btn">
-                <img src="/Practice-2019/Jungle-Academy/portfolio1/img/header, footer/ico_h_story.png" alt="kakaostory">
+                <img src="img/header, footer/ico_h_story.png" alt="kakaostory">
               </a>
               <a href="https://www.youtube.com/channel/UC9Pfm_o3Y3OgtpFXUIvsV7w?feature=watch" class="snb-btn">
-                <img src="/Practice-2019/Jungle-Academy/portfolio1/img/header, footer/ico_h_youtube.png" alt="youtube">
+                <img src="img/header, footer/ico_h_youtube.png" alt="youtube">
               </a>
               <a href="https://blog.naver.com/smartfnd" class="snb-btn">
-                <img src="/Practice-2019/Jungle-Academy/portfolio1/img/header, footer/ico_h_nblog.png" alt="nblog">
+                <img src="img/header, footer/ico_h_nblog.png" alt="nblog">
               </a>
               <a href="https://www.instagram.com/ilovesmart/" class="snb-btn">
-                <img src="/Practice-2019/Jungle-Academy/portfolio1/img/header, footer/ico_h_instargram.png"
+                <img src="img/header, footer/ico_h_instargram.png"
                   alt="instagram">
               </a>
             </div>
             <a href="https://pf.kakao.com/_LxoyAj" class="snb-right-btn">
-              <img src="/Practice-2019/Jungle-Academy/portfolio1/img/header, footer/ico_h_kakao.png" alt="kakao">
+              <img src="img/header, footer/ico_h_kakao.png" alt="kakao">
             </a>
           </div>
         </div>
