--- a/Jungle-Academy/portfolio1/index.html
+++ b/Jungle-Academy/portfolio1/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="css/index.css">
-  <title>Smart-Uniform</title>
+  <title>브랜드파워1위 스마트교복</title>
   <script src="js/promise.js"></script>
   <script src="https://unpkg.com/jquery"></script>
   <!--01-04-2019 start-->
