upload0418-media mobile 적용안됌

--- a/Jungle-Academy/portfolio2/ware-valley.html
+++ b/Jungle-Academy/portfolio2/ware-valley.html
@@ -147,28 +147,26 @@
   </section>
 
   <section id="boardList">
-    <article>
-      <ul class="utill">
-        <a href="#">
-          <h3>gartner research</h3>
-          <p>웨어밸리는 국내 기업 유일하게<br>
-          파트너의 DAP 분야 보고서의 언급되는<br>
-          DB보안 선두 기업입니다.</p>
-        </a>
-      </ul>
-      <ul class="utill traning">
-        <a href="#">
-          <h3>training</h3>
-          <p>전문가들로 구성된 강사진들의 교육을<br>
-          무료로 받으실 수 있습니다.</p>
-        </a>
-      </ul>
-      <ul class="utill download">
-        <a href="#">
-          <h3>download</h3>
-          <p>홈페이지를 방문하시는 모든 분들께<br>
-          회원가입 이후 무상 제공됩니다.</p>
-        </a>
+    <div>
+      <ul class="utill-wrap">
+        <li class="utill">
+          <a href="#">
+            <h3>gartner research</h3>
+            <p>웨어밸리는 국내 기업 유일하게<br> 파트너의 DAP 분야 보고서의 언급되는<br> DB보안 선두 기업입니다.</p>
+          </a>
+        </li>
+        <li class="utill traning">
+          <a href="#">
+            <h3>training</h3>
+            <p>전문가들로 구성된 강사진들의 교육을<br> 무료로 받으실 수 있습니다.</p>
+          </a>
+        </li>
+        <li class="utill download">
+          <a href="#">
+            <h3>download</h3>
+            <p>홈페이지를 방문하시는 모든 분들께<br> 회원가입 이후 무상 제공됩니다.</p>
+          </a>
+        </li>
       </ul>
 
       <div class="left">
@@ -187,7 +185,7 @@
           <li><a href="#">웨어밸리, 2018 위스 해외파트너 초청 행사 개최</a></li>
         </ul>
       </div>
-    </article>
+    </div>
   </section>
 
   <section id="aboutus">
@@ -217,7 +215,7 @@
     <div class="valleyLogo"></div>
   </footer>
 
-  <div class="topLogo">TOP</div>
+  <div class="logo-Top">TOP</div>
   
 </body>
 </html>
