#hidden-nav에 fixed추가

--- a/Jungle-Academy/portfolio2/ware-valley.html
+++ b/Jungle-Academy/portfolio2/ware-valley.html
@@ -9,9 +9,9 @@
   <title>WareValley</title>
   </head>
 <body>
-  <header id="mainHeader">
-    <nav id="mainNav">
-      <div id="innerNav">
+  <header id="main-header">
+    <nav id="main-nav">
+      <div class="inner-nav">
         <h1 class="logo">
           <a href="#">Ware<span>Valley</span></a>
         </h1>
@@ -87,7 +87,6 @@
           </ul>
         </nav>
 
-
         <a href="#" class="menu">
           <span class="item"></span>
           <span class="item"></span>
@@ -103,6 +102,100 @@
     <div class="mainTitle">
       <h1>Global Knowledge<span>enterprise</span></h1>
     </div>
+
+    <nav id="hidden-nav">
+      <div class="inner-nav">
+        <h1 class="logo">
+          <a href="#">Ware<span>Valley</span></a>
+        </h1>
+        <a href="#" class="menu">
+          <span class="item"></span>
+          <span class="item"></span>
+          <span class="item"></span>
+        </a>
+        <nav class="tnb">
+          <a href="#"><i class="far fa-file-alt"></i> Warevalley Data</a>
+          <a href="#"><i class="fas fa-fingerprint"></i> Login</a>
+          <a href="#"><i class="fas fa-globe"></i> Language</a>
+        </nav>
+      </div>
+
+      <div class="gnb-wrap">
+        <nav class="gnb">
+          <ul class="gnb-menu">
+            <li class="menus"><a class="menus-a" href="product.html">Product</a>
+              <ul class="sub-menus">
+                <li>
+                  <a href="#">cyclone</a>
+                </li>
+                <li>
+                  <a href="#">chakra max</a>
+                </li>
+                <li>
+                  <a href="#">galea</a>
+                </li>
+                <li>
+                  <a href="#">trusted orange</a>
+                </li>
+                <li>
+                  <a href="#">orange</a>
+                </li>
+                <li>
+                  <a href="#">petaSQL</a>
+                </li>
+                <li>
+                  <a href="#">lora</a>
+                </li>
+              </ul>
+            </li>
+            <li class="menus">
+              <a class="menus-a" href="#">Solutions</a>
+              <ul class="sub-menus">
+                <li>
+                  <a href="#">WISS</a>
+                </li>
+              </ul>
+            </li>
+            <li class="menus">
+              <a class="menus-a" href="#">Support</a>
+              <ul class="sub-menus">
+                <li>
+                  <a href="#">traning</a>
+                </li>
+                <li>
+                  <a href="#">download</a>
+                </li>
+                <li>
+                  <a href="#">orange board</a>
+                </li>
+              </ul>
+            </li>
+            <li class="menus">
+              <a class="menus-a" href="#">About us</a>
+              <ul class="sub-menus">
+                <li>
+                  <a href="#">CEO greetings</a>
+                </li>
+                <li>
+                  <a href="#">history</a>
+                </li>
+                <li>
+                  <a href="#">partners</a>
+                </li>
+                <li>
+                  <a href="#">news</a>
+                </li>
+                <li>
+                  <a href="#">contact us</a>
+                </li>
+              </ul>
+            </li>
+          </ul>
+        </nav>
+      </div>
+    
+    </nav>
+
   </header>
 
   <section id="product">
@@ -114,29 +207,21 @@
           <p>데이터 보안 진단 솔루션</p>
           <a class="btnMore">MORE</a>
         </li>
-      </ul>
-      <ul>
         <li class="chakra-max">
           <h3>Chakra max</h3>
           <p>세계 최고 데이터베이스 보안 솔루션</p>
           <a class="btnMore">MORE</a>
         </li>
-      </ul>
-      <ul>
         <li class="galea">
           <h3>Galea</h3>
           <p>중요 DBMS의 컬럼 암/복호화 솔루션</p>
           <a class="btnMore">MORE</a>
         </li>
-      </ul>
-      <ul>
         <li class="trusted-orange">
           <h3>Trusted orange</h3>
           <p>데이터베이스 작업 결재 솔루션</p>
           <a class="btnMore">MORE</a>
         </li>
-      </ul>
-      <ul>
         <li class="orange">
           <h3>Orange</h3>
           <p>DB개발, 성능관리 TOOL 오렌지</p>
@@ -208,7 +293,7 @@
     <address class="mainFooter">
       <span>대표이사 손삼수</span>
       <span>서울시 마포구 월드컵북로 396 (상암동, 누리꿈스퀘어) 비즈니스타워 22층</span>
-      <span><a href="#">TEL : 02-743-4910</a></span>
+      <span><a href="tel:+8227434910">TEL : 02-743-4910</a></span>
       <span>FAX : 02-743-4912</span><br>
       <span>Copyright &copy; 2018 WAREVALLEY All right reserved. Privacy & Legal</span>
     </address>
