--- a/Jungle-Academy/portfolio2/ware-valley.html
+++ b/Jungle-Academy/portfolio2/ware-valley.html
@@ -113,7 +113,7 @@
           <span class="item"></span>
           <span class="item"></span>
         </a>
-        <nav class="tnb">
+        <nav class="tnb"> <!--이동하기-->
           <a href="#"><i class="far fa-file-alt"></i> Warevalley Data</a>
           <a href="#"><i class="fas fa-fingerprint"></i> Login</a>
           <a href="#"><i class="fas fa-globe"></i> Language</a>
