--- a/study/20190424/0424-01.html
+++ b/study/20190424/0424-01.html
@@ -42,7 +42,7 @@
         <article></article>
 
         <article>
-          <video muted autoplay loop>
+          <video autoplay loop>
             <source src="mp4/vid.mp4" type="video/mp4">
           </video>
         </article>
