--- a/Jungle-Academy/portfolio2/ware-valley.html
+++ b/Jungle-Academy/portfolio2/ware-valley.html
@@ -10,8 +10,17 @@
   <title>WareValley</title>
   </head>
   <body>
-    <div class="hero">
+    <div class="top-hero hero1">
       <h1>Global Knowledge<span>enterprise</span></h1>
+    </div>
+    <div class="top-hero hero2">
+      <h1>Orange<span>데이터베이스 개발과 관리 도구</span></h1>
+      <a class="hero-btn" href="javascript:;">view more</a>
+    </div>
+    <div class="top-hero hero3">
+      <!-- img바꿧음 위치 다시 지정필요 -->
+      <h1><img src="img/download/common/slide_visual03_1.png" alt="hero3"><span>웨어밸리 정보 보안 통합 솔루션</span></h1>
+      <a class="hero-btn" href="javascript:;">view more</a>
     </div>
     <header class="main-header">
       <!-- container/wrapper/wrap 영역임 -->
@@ -113,28 +122,45 @@
       <h2>Products</h2>
       <ul>
         <li class="cyclone">
+          <div class="image-wrap"></div>
           <h3>Cyclone</h3>
           <p>데이터 보안 진단 솔루션</p>
           <a class="btnMore">MORE</a>
         </li>
         <li class="chakra-max">
+          <div class="image-wrap"></div>
           <h3>Chakra max</h3>
           <p>세계 최고 데이터베이스 보안 솔루션</p>
           <a class="btnMore">MORE</a>
         </li>
         <li class="galea">
+          <div class="image-wrap"></div>
           <h3>Galea</h3>
           <p>중요 DBMS의 컬럼 암/복호화 솔루션</p>
           <a class="btnMore">MORE</a>
         </li>
         <li class="trusted-orange">
+          <div class="image-wrap"></div>
           <h3>Trusted orange</h3>
           <p>데이터베이스 작업 결재 솔루션</p>
           <a class="btnMore">MORE</a>
         </li>
         <li class="orange">
+          <div class="image-wrap"></div>
           <h3>Orange</h3>
           <p>DB개발, 성능관리 TOOL 오렌지</p>
+          <a class="btnMore">MORE</a>
+        </li>
+        <li class="petasql">
+          <div class="image-wrap"></div>
+          <h3>peta SQL</h3>
+          <p>분석용 데이터베이스</p>
+          <a class="btnMore">MORE</a>
+        </li>
+        <li class="lora">
+          <div class="image-wrap"></div>
+          <h3>lora</h3>
+          <p>실시간 데이터 복제 솔루션</p>
           <a class="btnMore">MORE</a>
         </li>
       </ul>
@@ -155,12 +181,14 @@
             <h3>training</h3>
             <p>전문가들로 구성된 강사진들의 교육을<br> 무료로 받으실 수 있습니다.</p>
           </a>
+          <img src="img/download/common/icon_support1.png" alt="icon1">
         </li>
         <li class="utill download">
           <a href="javascript:;">
             <h3>download</h3>
             <p>홈페이지를 방문하시는 모든 분들께<br> 회원가입 이후 무상 제공됩니다.</p>
           </a>
+          <img src="img/download/common/icon_support2.png" alt="icon2">
         </li>
       </ul>
 
@@ -195,7 +223,8 @@
       <div class="innerBox">
         <h3>글로벌 솔루션<span></span></h3>
         <p>웨어밸리 "샤크라 맥스" 아시아 기업최초 가트너 선정<br>
-        2012년부터 7년 연속 세계 데이터베이스 보안솔루션 시장 경쟁 구도분석 보고서에 등재</p>
+        2012년부터 7년 연속 세계 데이터베이스 보안솔루션 시장 경쟁 구도분석 보고서에 등재
+        </p>
       </div>
     </div>
   </section>
